[gd_scene load_steps=3 format=3 uid="uid://jenv10mdt303"]

[ext_resource type="Theme" uid="uid://cblg4ct5bcghv" path="res://interfaces/menu_theme.tres" id="1_iitrw"]
[ext_resource type="Script" path="res://interfaces/credits.gd" id="2_bcrdg"]

[node name="Credits" type="PanelContainer" node_paths=PackedStringArray("first_button")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -225.5
offset_right = 179.5
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iitrw")
script = ExtResource("2_bcrdg")
first_button = NodePath("VBoxContainer2/HBoxContainer/corsi_social")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Credits" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("1_iitrw")
theme_type_variation = &"title"
text = "CRÉDITOS"

[node name="separator" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="Team" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
theme = ExtResource("1_iitrw")
text = "Equipe: os cabecinhas"

[node name="separator2" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_override_constants/separation = 0

[node name="Animations" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_type_variation = &"subtitle"
text = "Animações e Design de Personagens"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="Corsi" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_iitrw")
text = "Gabriel Corsi"

[node name="corsi_social" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_iitrw")
text = "@kupts"
alignment = 2

[node name="Art" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_type_variation = &"subtitle"
text = "Arte e 3D"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="Beto" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_iitrw")
text = "Beto Barros"

[node name="beto_social" type="Button" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_iitrw")
text = "@betonesio"
alignment = 2

[node name="Sound" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_type_variation = &"subtitle"
text = "Som e Música Original"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="Pedro" type="Label" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_iitrw")
text = "Pedro Osinski Carneiro"

[node name="pedro_social" type="Button" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_iitrw")
text = "@pedrosinskicarneiro"
alignment = 2

[node name="Coding" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_type_variation = &"subtitle"
text = "Programação"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="eduardo" type="Label" parent="VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_iitrw")
text = "Eduardo Silva"

[node name="eduardo_social" type="Button" parent="VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_iitrw")
text = "@edusilvart"
alignment = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_override_constants/separation = 20

[node name="Voice" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
theme_type_variation = &"subtitle"
text = "Voz da professora"

[node name="Halina" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")
text = "Halina Grossman Pereira"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_iitrw")

[node name="Back" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../HBoxContainer4/eduardo_social")
theme = ExtResource("1_iitrw")
text = "Voltar"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/corsi_social" to="." method="_on_corsi_social_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer2/beto_social" to="." method="_on_beto_social_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer3/pedro_social" to="." method="_on_pedro_social_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer4/eduardo_social" to="." method="_on_eduardo_social_pressed"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_back_pressed"]
